--- a/server/enet-1.3.15/autom4te.cache/traces.1
+++ b/server/enet-1.3.15/autom4te.cache/traces.1
@@ -1,11 +1,11 @@
-m4trace:aclocal.m4:681: -1- AC_SUBST([am__quote])
-m4trace:aclocal.m4:681: -1- AC_SUBST_TRACE([am__quote])
-m4trace:aclocal.m4:681: -1- m4_pattern_allow([^am__quote$])
-m4trace:aclocal.m4:1133: -1- m4_include([m4/libtool.m4])
-m4trace:aclocal.m4:1134: -1- m4_include([m4/ltoptions.m4])
-m4trace:aclocal.m4:1135: -1- m4_include([m4/ltsugar.m4])
-m4trace:aclocal.m4:1136: -1- m4_include([m4/ltversion.m4])
-m4trace:aclocal.m4:1137: -1- m4_include([m4/lt~obsolete.m4])
+m4trace:aclocal.m4:679: -1- AC_SUBST([am__quote])
+m4trace:aclocal.m4:679: -1- AC_SUBST_TRACE([am__quote])
+m4trace:aclocal.m4:679: -1- m4_pattern_allow([^am__quote$])
+m4trace:aclocal.m4:1136: -1- m4_include([m4/libtool.m4])
+m4trace:aclocal.m4:1137: -1- m4_include([m4/ltoptions.m4])
+m4trace:aclocal.m4:1138: -1- m4_include([m4/ltsugar.m4])
+m4trace:aclocal.m4:1139: -1- m4_include([m4/ltversion.m4])
+m4trace:aclocal.m4:1140: -1- m4_include([m4/lt~obsolete.m4])
 m4trace:configure.ac:1: -1- AC_INIT([libenet], [1.3.15])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([_AC_])
@@ -71,6 +71,9 @@ m4trace:configure.ac:1: -1- m4_pattern_allow([^sharedstatedir$])
 m4trace:configure.ac:1: -1- AC_SUBST([localstatedir], ['${prefix}/var'])
 m4trace:configure.ac:1: -1- AC_SUBST_TRACE([localstatedir])
 m4trace:configure.ac:1: -1- m4_pattern_allow([^localstatedir$])
+m4trace:configure.ac:1: -1- AC_SUBST([runstatedir], ['${localstatedir}/run'])
+m4trace:configure.ac:1: -1- AC_SUBST_TRACE([runstatedir])
+m4trace:configure.ac:1: -1- m4_pattern_allow([^runstatedir$])
 m4trace:configure.ac:1: -1- AC_SUBST([includedir], ['${prefix}/include'])
 m4trace:configure.ac:1: -1- AC_SUBST_TRACE([includedir])
 m4trace:configure.ac:1: -1- m4_pattern_allow([^includedir$])
@@ -156,7 +159,7 @@ m4trace:configure.ac:1: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:1: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:3: -1- AM_INIT_AUTOMAKE([foreign])
 m4trace:configure.ac:3: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:3: -1- AM_AUTOMAKE_VERSION([1.16.3])
+m4trace:configure.ac:3: -1- AM_AUTOMAKE_VERSION([1.16.1])
 m4trace:configure.ac:3: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:3: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:3: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -504,9 +507,9 @@ m4trace:configure.ac:17: -1- AC_DEFINE_TRACE_LITERAL([HAS_INET_NTOP])
 m4trace:configure.ac:17: -1- m4_pattern_allow([^HAS_INET_NTOP$])
 m4trace:configure.ac:19: -1- AC_DEFINE_TRACE_LITERAL([HAS_MSGHDR_FLAGS])
 m4trace:configure.ac:19: -1- m4_pattern_allow([^HAS_MSGHDR_FLAGS$])
-m4trace:configure.ac:24: -1- AC_DEFINE_TRACE_LITERAL([HAS_SOCKLEN_T])
-m4trace:configure.ac:24: -1- m4_pattern_allow([^HAS_SOCKLEN_T$])
-m4trace:configure.ac:27: -1- AC_CONFIG_FILES([Makefile
+m4trace:configure.ac:21: -1- AC_DEFINE_TRACE_LITERAL([HAS_SOCKLEN_T])
+m4trace:configure.ac:21: -1- m4_pattern_allow([^HAS_SOCKLEN_T$])
+m4trace:configure.ac:26: -1- AC_CONFIG_FILES([Makefile
 	libenet.pc])
 m4trace:configure.ac:28: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
 m4trace:configure.ac:28: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
